--- a/index.html
+++ b/index.html
@@ -14,6 +14,56 @@
       color: #1b1b1b;
       scroll-behavior: smooth;
     }
+    .logo {
+      font-family: 'Poppins', sans-serif;
+      font-weight: 800;
+      font-size: 36px;
+      background: linear-gradient(90deg, #00c853, #2196f3);
+      -webkit-background-clip: text;
+      -webkit-text-fill-color: transparent;
+      text-transform: uppercase;
+      letter-spacing: 2px;
+      position: relative;
+      display: inline-block;
+}
+
+    .logo::after {
+      content: '';
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      height: 4px;
+      width: 40%;
+      background: #00c853;
+      transition: width 0.3s ease;
+    }
+
+    .logo:hover::after {
+      width: 100%;
+    }
+    .ai-heading {
+      font-family: 'Roboto', 'Segoe UI', sans-serif;
+      font-size: 20px;
+      font-weight: 600;
+      color: #1a1a1a;
+      text-align: center;
+      background: linear-gradient(to right, #e0e0e0, #f8f8f8);
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.05);
+      max-width: 900px;
+      margin: 5px auto;
+      line-height: 1.6;
+}
+    .nav-item:hover {
+      transform: translateY(-3px);
+      box-shadow: 0 8px 16px rgba(0, 242, 254, 0.4);
+      color: white;
+      border: none;
+      border-radius: 12px;
+      cursor: pointer;
+      font-weight: bold;
+      transition: 0.3s;
+    }
     .navbar {
       background-color: #001f3f;
     }
@@ -22,7 +72,11 @@
       font-weight: 600;
     }
     .hero {
-      background: linear-gradient(to right, #001f3f, #0074D9);
+/*      background: linear-gradient(to right, #001f3f, #0074D9);*/
+      background: url('./img/banner.jpg');
+      background-repeat: no-repeat;
+      background-size: cover;
+      opacity: 0.8;
       color: white;
       padding: 100px 20px;
       text-align: center;
@@ -68,20 +122,67 @@
       background-color: #f1f9ff;
     }
     .background-logo {
-  position: relative;
-  width: 100%;
-  overflow: hidden;
+      position: relative;
+      width: 100%;
+      overflow: hidden;
+      height: 500px;
 }
-
-
-.overlay-content {
-  position: relative;
-  z-index: 1;
-  color: white;
-  text-align: center;
-  padding-top: 150px;
+    .overlay-content {
+      position: relative;
+      z-index: 1;
+      color: white;
+      text-align: center;
+      padding-top: 320px;
 }
+        .stock-table {
+      font-family: Arial, sans-serif;
+      background-color: #f6f9fc;
+      padding: 20px;
+      border-radius: 10px;
+    }
 
+    .stock-table h2 {
+      text-align: center;
+      margin-bottom: 20px;
+      color: #0f1e39;
+    }
+
+    .stock-table table {
+      width: 100%;
+      border-collapse: collapse;
+      background-color: #fff;
+      box-shadow: 0 0 10px rgba(0,0,0,0.05);
+      border-radius: 8px;
+      overflow: hidden;
+    }
+
+    .stock-table thead {
+      background-color: #0f1e39;
+      color: #fff;
+    }
+
+    .stock-table th, .stock-table td {
+      padding: 12px 16px;
+      text-align: center;
+      border-bottom: 1px solid #e0e0e0;
+    }
+
+    .stock-table tbody tr:hover {
+      background-color: #f1f1f1;
+    }
+    .stock-table .green {
+      color: #00b14f;
+      font-weight: bold;
+    }
+
+    .stock-table .red {
+      color: #d62d2d;
+      font-weight: bold;
+    }
+
+    .stock-table .gray {
+      color: #666;
+    }
   </style>
 </head>
 <body>
@@ -89,7 +190,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-    <a class="navbar-brand " href="#">FRM</a>
+    <a class="navbar-brand logo " href="#">FRM AI</a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navContent">
       <span class="navbar-toggler-icon bg-light"></span>
     </button>
@@ -99,7 +200,7 @@
         <li class="nav-item"><a href="#about" class="nav-link">Giới thiệu</a></li>
         <li class="nav-item"><a href="http://localhost:8080/" class="nav-link">Chức năng</a></li>
         <li class="nav-item">
-          <a class="nav-link" href="#demo">Minh họa</a>
+          <a class="nav-link" href="#demo">Hoạt động</a>
         </li>
         <li class="nav-item"><a href="#contact" class="nav-link">Liên hệ</a></li>
       </ul>
@@ -110,20 +211,17 @@
 <!-- Hero -->
 <section class="hero" id="home">
    <!-- Video nền -->
-    <video width="900vh" autoplay muted loop class="video-bg">
+    <!-- <video width="900vh" autoplay muted loop class="video-bg" style="border-radius: 20px;">
       <source src="./img/video_banner.mp4" type="video/mp4">
       Trình duyệt không hỗ trợ video.
-    </video>
+    </video> -->
   <div class="background-logo">
-
-   
-
     <!-- Nội dung phủ trên video -->
     <div class="overlay-content container">
-      <h1 data-aos="fade-up"></h1>
-      <p class="lead mb-4" data-aos="fade-up" data-aos-delay="100">
+      <!-- <h1 data-aos="fade-up"></h1> -->
+      <h2 class="lead mb-4 ai-heading" data-aos="fade-up" data-aos-delay="100" style="font-size:30px">
         Công cụ AI giúp bạn phân tích và dự đoán giá cổ phiếu một cách thông minh và chính xác
-      </p>
+      </h2>
       <a href="#features" class="btn btn-primary btn-lg" data-aos="zoom-in" data-aos-delay="200">
         Khám phá ngay
       </a>
@@ -205,17 +303,54 @@
 <!-- Demo Section -->
 <section id="demo" class="py-5">
   <div class="container">
-    <h2 class="section-title text-center" data-aos="fade-up">Minh họa hoạt động</h2>
+    <h2 class="section-title text-center" data-aos="fade-up">Hoạt động</h2>
     <div class="row justify-content-center">
       <div class="col-md-8" data-aos="fade-up" data-aos-delay="100">
         <div class="card p-4">
-          <p>Biểu đồ mô phỏng dự báo giá cổ phiếu, ví dụ: VHM, VIC, FPT...</p>
+          <!-- <p>Biểu đồ mô phỏng dự báo giá cổ phiếu, ví dụ: VHM, VIC, FPT...</p>
           <!-- <img src="https://a.c-dn.net/c/content/dam/publicsites/igcom/uk/images/ContentImage/Pennant.png/jcr:content/renditions/original-size.webp" class="img-fluid" alt="Demo Chart"> -->
           
-          <video autoplay muted loop class="video-bg">
+          <!-- <video autoplay muted loop class="video-bg">
       <source src="./img/Demo.mp4" type="video/mp4">
       Trình duyệt không hỗ trợ video.
-    </video>
+    </video> --> 
+       <div class="stock-table">
+    <h2>BẢNG GIÁ CỔ PHIẾU</h2>
+    <table>
+      <thead>
+        <tr>
+          <th>Mã</th>
+          <th>Giá hiện tại</th>
+          <th>Thay đổi</th>
+          <th>% Thay đổi</th>
+          <th>Khối lượng</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td>VNM</td>
+          <td class="green">73.5</td>
+          <td class="green">+1.2</td>
+          <td class="green">+1.61%</td>
+          <td class="gray">1,230,000</td>
+        </tr>
+        <tr>
+          <td>FPT</td>
+          <td class="green">123.0</td>
+          <td class="green">+2.1</td>
+          <td class="green">+1.74%</td>
+          <td class="gray">980,000</td>
+        </tr>
+        <tr>
+          <td>VCB</td>
+          <td>85.0</td>
+          <td>0.0</td>
+          <td>0.00%</td>
+          <td class="gray">1,560,000</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
         </div>
       </div>
     </div>
