--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
       <ul class="navbar-nav ms-auto">
         <li class="nav-item"><a href="#features" class="nav-link">Tính năng</a></li>
         <li class="nav-item"><a href="#about" class="nav-link">Giới thiệu</a></li>
-        <li class="nav-item"><a href="https://lovable.dev/projects/f7875535-ab37-4c6a-8b9a-69d0ef8ec338" class="nav-link">Chức năng</a></li>
+        <li class="nav-item"><a href="#" class="nav-link">Chức năng</a></li>
         <li class="nav-item">
           <a class="nav-link" href="#demo">Hoạt động</a>
         </li>
