--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>FRM AI - Dự đoán giá chứng khoán bằng AI</title>
+  <title>FRM-AI - Dự đoán giá chứng khoán bằng AI</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://unpkg.com/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet" />
@@ -35,7 +35,7 @@
       height: 4px;
       width: 40%;
       background: #00c853;
-      transition: width 0.3s ease;
+      transition: width 0.8s ease;
     }
 
     .logo:hover::after {
@@ -66,28 +66,82 @@
     }
     .navbar {
       background-color: #001f3f;
+      transition: top 0.4s ease;
     }
     .navbar-brand, .nav-link {
       color: #00f5a0 !important;
       font-weight: 600;
     }
-    .hero {
-/*      background: linear-gradient(to right, #001f3f, #0074D9);*/
-      background: url('./img/banner.jpg');
-      background-repeat: no-repeat;
-      background-size: cover;
-      opacity: 0.8;
-      color: white;
-      padding: 100px 20px;
-      text-align: center;
+    .navbar.hide-navbar {
+      top: -100px; 
     }
-    .hero h1 {
-      font-size: 3rem;
-      font-weight: 800;
-    }
-    .hero p {
-      font-size: 1.25rem;
-    }
+    .hero-full {
+  width: 100%;
+  height: 100vh;
+  background: #001f3f;
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 0 20px;
+  text-align: center;
+  position: relative;
+  overflow: hidden;
+}
+
+.hero-inner {
+  max-width: 820px;
+}
+
+.hero-heading {
+  font-size: 3rem;
+  font-weight: 800;
+  line-height: 1.3;
+  margin-bottom: 20px;
+  color: #00d4ff
+}
+
+.hero-desc {
+  font-size: 1.25rem;
+  color: #e0e0e0;
+  line-height: 1.6;
+  margin-bottom: 40px;
+}
+
+.hero-buttons {
+  display: flex;
+  justify-content: center;
+  gap: 20px;
+  flex-wrap: wrap;
+}
+
+.btn-filled {
+  background-color: #00d4ff;
+  color: #1e1e1e;
+  padding: 12px 28px;
+  border-radius: 8px;
+  font-weight: 600;
+  transition: all 0.3s ease;
+  text-decoration: none;
+}
+
+.btn-filled:hover {
+  background-color: #125867;
+}
+
+.btn-outline {
+  border: 2px solid #00d4ff;
+  color: #00d4ff;
+  padding: 12px 28px;
+  border-radius: 8px;
+  font-weight: 600;
+  text-decoration: none;
+  transition: all 0.3s ease;
+}
+
+.btn-outline:hover {
+  background-color:#071422;
+}
     .btn-primary {
       background-color: #00f5a0;
       border: none;
@@ -190,7 +244,7 @@
 <!-- Navbar -->
 <nav class="navbar navbar-expand-lg fixed-top">
   <div class="container">
-    <a class="navbar-brand logo " href="#">FRM AI</a>
+    <a class="navbar-brand logo " href="#">FRM-AI</a>
     <button class="navbar-toggler" data-bs-toggle="collapse" data-bs-target="#navContent">
       <span class="navbar-toggler-icon bg-light"></span>
     </button>
@@ -209,26 +263,27 @@
 </nav>
 
 <!-- Hero -->
-<section class="hero" id="home">
-   <!-- Video nền -->
-    <!-- <video width="900vh" autoplay muted loop class="video-bg" style="border-radius: 20px;">
-      <source src="./img/video_banner.mp4" type="video/mp4">
-      Trình duyệt không hỗ trợ video.
-    </video> -->
-  <div class="background-logo">
-    <!-- Nội dung phủ trên video -->
-    <div class="overlay-content container">
-      <!-- <h1 data-aos="fade-up"></h1> -->
-      <h2 class="lead mb-4 ai-heading" data-aos="fade-up" data-aos-delay="100" style="font-size:30px">
-        Công cụ AI giúp bạn phân tích và dự đoán giá cổ phiếu một cách thông minh và chính xác
-      </h2>
-      <a href="#features" class="btn btn-primary btn-lg" data-aos="zoom-in" data-aos-delay="200">
-        Khám phá ngay
-      </a>
+<section class="hero-full" id="home">
+  <div class="hero-inner">
+    <h1 class="hero-heading" data-aos="fade-up">
+      FRM-AI – Trí tuệ nhân tạo cho quyết định đầu tư thông minh
+    </h1>
+    <p class="hero-desc" data-aos="fade-up" data-aos-delay="100">
+      Hơn 2.000.000 nhà đầu tư & 90+ công ty chứng khoán đã tin dùng nền tảng AI này để phân tích và dự báo thị trường.
+    </p>
+    <div class="hero-buttons" data-aos="fade-up" data-aos-delay="200">
+      <a href="#features" class="btn-outline">Khám phá ngay</a>
+      <a href="#demo" class="btn-filled">Xem Demo</a>
     </div>
-
   </div>
 </section>
+
+
+<style>
+  .slogan {
+    color: #00f5a0;
+  }
+</style>
 
 <!-- Features -->
 <section id="features" class="py-5 bg-lightblue">
@@ -266,7 +321,7 @@
     <h2 class="section-title text-center" data-aos="fade-up">Giới thiệu</h2>
     <div class="row justify-content-center">
       <div class="col-lg-8 text-center" data-aos="fade-up" data-aos-delay="100">
-        <p>FRM AI là nền tảng ứng dụng trí tuệ nhân tạo được thiết kế để hỗ trợ nhà đầu tư cá nhân và tổ chức tại Việt Nam phân tích thị trường chứng khoán. Công cụ này tích hợp dữ liệu lịch sử, mô hình học sâu và biểu đồ trực quan giúp bạn hiểu rõ hơn về các mã cổ phiếu như VHM, FPT, MWG, và đưa ra quyết định đầu tư đúng thời điểm.</p>
+        <p>FRM-AI là nền tảng ứng dụng trí tuệ nhân tạo được thiết kế để hỗ trợ nhà đầu tư cá nhân và tổ chức tại Việt Nam phân tích thị trường chứng khoán. Công cụ này tích hợp dữ liệu lịch sử, mô hình học sâu và biểu đồ trực quan giúp bạn hiểu rõ hơn về các mã cổ phiếu như VHM, FPT, MWG, và đưa ra quyết định đầu tư đúng thời điểm.</p>
       </div>
     </div>
   </div>
@@ -274,28 +329,62 @@
 <!-- Target Users -->
 <section id="users" class="py-5">
   <div class="container">
-    <h2 class="section-title text-center" data-aos="fade-up">Ai nên sử dụng FRM AI?</h2>
+    <h2 class="section-title text-center" data-aos="fade-up">Ai nên sử dụng FRM-AI?</h2>
     <div class="row g-4">
-      <div class="col-md-4" data-aos="fade-right">
-        <div class="p-4 feature-card text-center h-100">
-          <div class="icon-box"><i class="fas fa-user-graduate"></i></div>
-          <h5>Sinh viên tài chính</h5>
-          <p>Học cách phân tích thị trường với công cụ hiện đại và dữ liệu thực tế.</p>
-        </div>
-      </div>
+      <!-- Dành cho Doanh nghiệp đầu tư -->
       <div class="col-md-4" data-aos="fade-up">
         <div class="p-4 feature-card text-center h-100">
-          <div class="icon-box"><i class="fas fa-chart-pie"></i></div>
-          <h5>Nhà đầu tư cá nhân</h5>
-          <p>Ra quyết định đầu tư hiệu quả hơn dựa trên dữ liệu và AI.</p>
+          <div class="icon-box"><i class="fas fa-building"></i></div>
+          <h5>Dành cho Doanh nghiệp đầu tư</h5>
+          <ul class="list-unstyled text-start">
+            <li><i class="fas fa-check-circle text-success"></i> Phân tích nhiều cổ phiếu cùng lúc</li>
+            <li><i class="fas fa-check-circle text-success"></i> Cảnh báo tự động khi có cơ hội đầu tư</li>
+            <li><i class="fas fa-check-circle text-success"></i> Báo cáo chi tiết về thị trường</li>
+            <li><i class="fas fa-check-circle text-success"></i> Tích hợp API cho hệ thống nội bộ</li>
+            <li><i class="fas fa-check-circle text-success"></i> Hỗ trợ chiến lược đầu tư dài hạn</li>
+          </ul>
         </div>
       </div>
+      <!-- Dành cho Nhà đầu tư cá nhân -->
       <div class="col-md-4" data-aos="fade-left">
         <div class="p-4 feature-card text-center h-100">
-          <div class="icon-box"><i class="fas fa-building"></i></div>
-          <h5>Doanh nghiệp đầu tư</h5>
-          <p>Phân tích nhiều cổ phiếu cùng lúc và nhận cảnh báo thị trường tự động.</p>
+          <div class="icon-box"><i class="fas fa-user"></i></div>
+          <h5>Dành cho Nhà đầu tư cá nhân</h5>
+          <ul class="list-unstyled text-start">
+            <li><i class="fas fa-check-circle text-success"></i> Phân tích dữ liệu lịch sử cổ phiếu</li>
+            <li><i class="fas fa-check-circle text-success"></i> Dự đoán xu hướng giá cổ phiếu</li>
+            <li><i class="fas fa-check-circle text-success"></i> Cảnh báo biến động thị trường</li>
+            <li><i class="fas fa-check-circle text-success"></i> Hỗ trợ ra quyết định đầu tư</li>
+            <li><i class="fas fa-check-circle text-success"></i> Theo dõi danh mục đầu tư cá nhân</li>
+          </ul>
         </div>
+      </div>
+      <!-- Dành cho Sinh viên tài chính -->
+      <div class="col-md-4" data-aos="fade-right">
+        <div class="p-4 feature-card text-center h-100">
+          <div class="icon-box"><i class="fas fa-graduation-cap"></i></div>
+          <h5>Dành cho Sinh viên tài chính</h5>
+          <ul class="list-unstyled text-start">
+            <li><i class="fas fa-check-circle text-success"></i> Học cách phân tích thị trường</li>
+            <li><i class="fas fa-check-circle text-success"></i> Sử dụng công cụ hiện đại</li>
+            <li><i class="fas fa-check-circle text-success"></i> Tiếp cận dữ liệu thực tế</li>
+            <li><i class="fas fa-check-circle text-success"></i> Thực hành với mô hình AI</li>
+            <li><i class="fas fa-check-circle text-success"></i> Nâng cao kỹ năng đầu tư tài chính</li>
+          </ul>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
+<!-- Product Story -->
+ <section id="story" class="py-5">
+  <div class="container">
+    <h2 class="section-title text-center" data-aos="fade-up">Câu chuyện sản phẩm</h2>
+    <div class="row justify-content-center">
+      <div class="col-lg-8 text-center" data-aos="fade-up" data-aos-delay="100">
+       <p style="font-size:22px"> FRM-AI ra đời từ khát vọng đưa trí tuệ nhân tạo đến gần hơn với nhà đầu tư Việt. Trong một thị trường luôn biến động, chúng tôi hiểu rằng mỗi quyết định đầu tư đều cần sự thấu hiểu và hỗ trợ vững chắc. </p> 
+
+       <p style="font-size:22px"> Với công nghệ AI hiện đại, FRM-AI không chỉ phân tích dữ liệu và dự đoán xu hướng, mà còn là người bạn đồng hành đáng tin cậy trên hành trình đầu tư của bạn. Cùng FRM-AI, khám phá sức mạnh của công nghệ để đầu tư thông minh hơn — hôm nay và cả tương lai. </p>
       </div>
     </div>
   </div>
@@ -364,7 +453,7 @@
       <div class="accordion-item" data-aos="fade-up" data-aos-delay="100">
         <h2 class="accordion-header" id="headingOne">
           <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#faq1">
-            FRM AI có miễn phí không?
+            FRM-AI có miễn phí không?
           </button>
         </h2>
         <div id="faq1" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
@@ -378,7 +467,7 @@
           </button>
         </h2>
         <div id="faq2" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">Có. FRM AI hỗ trợ nhập mã chứng khoán cụ thể (ví dụ: VHM, FPT, MWG...) để phân tích và dự đoán.</div>
+          <div class="accordion-body">Có. FRM-AI hỗ trợ nhập mã chứng khoán cụ thể (ví dụ: VHM, FPT, MWG...) để phân tích và dự đoán.</div>
         </div>
       </div>
       <div class="accordion-item" data-aos="fade-up" data-aos-delay="300">
@@ -388,13 +477,74 @@
           </button>
         </h2>
         <div id="faq3" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
-          <div class="accordion-body">FRM AI sử dụng dữ liệu từ nguồn mở (vd. VNQuant, Fireant...) kết hợp với mô hình nội bộ để đảm bảo độ chính xác.</div>
+          <div class="accordion-body">FRM-AI sử dụng dữ liệu từ nguồn mở (vd. VNQuant, Fireant...) kết hợp với mô hình nội bộ để đảm bảo độ chính xác.</div>
         </div>
       </div>
     </div>
   </div>
 </section>
-
+<!-- Reviews -->
+ <section id="reviews" class="py-5 bg-lightblue">
+  <div class="container">
+    <h2 class="section-title text-center" data-aos="fade-up">Đánh giá sản phẩm</h2>
+    <div class="row justify-content-center">
+      <!-- Review 1 -->
+      <div class="col-md-4" data-aos="fade-up" data-aos-delay="100">
+        <div class="card p-4 text-center">
+          <div class="rating mb-3">
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+          </div>
+          <p><i>"Nền tảng có tính ứng dụng hiệu quả, kết hợp công nghệ mô phỏng và thực hành tài chính, giúp số hóa và nâng cao chất lượng đào tạo."</i></p>
+          <div class="reviewer-info mt-3">
+            <img src="./img/avatar.jpg" class="rounded-circle me-3" width="50" >
+            <h5>TS. Lê Ngọc Thành</h5>
+            <small>Phó Trường khoa CNTT - ĐH KHTN, ĐHQG-HCM</small>
+          </div>
+        </div>
+      </div>
+      <!-- Review 2 -->
+      <div class="col-md-4" data-aos="fade-up" data-aos-delay="200">
+        <div class="card p-4 text-center">
+          <div class="rating mb-3">
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+          </div>
+          <p><i>"Nền tảng tích hợp dữ liệu thời gian thực và phân tích đầu tư tự động, giúp các doanh nghiệp tư vấn chứng khoán theo dõi thị trường, tối ưu danh mục."</i></p>
+          <div class="reviewer-info mt-3">
+            <img src="./img/avatar.jpg" alt="Lại Đức Long" class="rounded-circle" width="50">
+            <h5>Lại Đức Long</h5>
+            <small>Risk Manager - Công ty Cổ phần Chứng khoán VPS</small>
+          </div>
+        </div>
+      </div>
+      <!-- Review 3 -->
+      <div class="col-md-4" data-aos="fade-up" data-aos-delay="300">
+        <div class="card p-4 text-center">
+          <div class="rating mb-3">
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+            <i class="fas fa-star text-warning"></i>
+          </div>
+          <p><i>"FRM-AI không chỉ giúp tôi đưa ra quyết định đầu tư tốt hơn mà còn tiết kiệm rất nhiều thời gian phân tích, hỗ trợ quá trình học và tiếp cận công nghệ AI."</i></p>
+          <div class="reviewer-info mt-3">
+            <img src="./img/avatar.jpg" alt="Nguyễn Gia Phúc" class="rounded-circle" width="50">
+            <h5>Nguyễn Gia Phúc</h5>
+            <small>Sinh viên CNTT - ĐH KHTN, ĐHQG-HCM</small>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</section>
 <!-- Contact -->
 <section id="contact" class="py-5 bg-lightblue">
   <div class="container">
@@ -412,15 +562,120 @@
   </div>
 </section>
 <!-- Footer -->
-<footer>
-  <div class="container text-center">
-    <p class="mb-1">© 2025 FRM AI | Dự đoán chứng khoán bằng Trí tuệ nhân tạo</p>
-    <small>Design with ♥ by FRM Team</small>
+<footer class="custom-footer">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-4">
+        <h5 class="footer-title">FRM-AI</h5>
+        <p>Nền tảng dự đoán giá chứng khoán bằng AI, giúp bạn đầu tư thông minh và hiệu quả.</p>
+        <div class="social-icons">
+          <a href="#" class="social-icon"><i class="fab fa-facebook-f"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-linkedin-in"></i></a>
+          <a href="#" class="social-icon"><i class="fab fa-twitter"></i></a>
+        </div>
+      </div>
+      <div class="col-md-2">
+        <h5 class="footer-title">Sản phẩm</h5>
+        <ul class="footer-links">
+          <li><a href="#features">Tính năng</a></li>
+          <li><a href="#pricing">Bảng giá</a></li>
+          <li><a href="#api">API</a></li>
+          <li><a href="#integration">Tích hợp</a></li>
+          <li><a href="#security">Bảo mật</a></li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <h5 class="footer-title">Hỗ trợ</h5>
+        <ul class="footer-links">
+          <li><a href="#help-center">Trung tâm trợ giúp</a></li>
+          <li><a href="#contact">Liên hệ</a></li>
+          <li><a href="#status">Trạng thái hệ thống</a></li>
+          <li><a href="#api-docs">Tài liệu API</a></li>
+          <li><a href="#community">Cộng đồng</a></li>
+        </ul>
+      </div>
+      <div class="col-md-2">
+        <h5 class="footer-title">Công ty</h5>
+        <ul class="footer-links">
+          <li><a href="#about">Về chúng tôi</a></li>
+          <li><a href="#careers">Tuyển dụng</a></li>
+          <li><a href="#news">Tin tức</a></li>
+          <li><a href="#privacy-policy">Chính sách bảo mật</a></li>
+          <li><a href="#terms">Điều khoản sử dụng</a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="text-center mt-4">
+      <p>© 2025 FRM-AI. Tất cả quyền được bảo lưu.</p>
+      <small>Made by FRM-AI Team in Vietnam</small>
+    </div>
   </div>
 </footer>
+
+<style>
+  .slogan {
+    color: #00f5a0;
+  }
+
+  .custom-footer {
+    background-color: #001f3f;
+    color: #ccc;
+    padding: 40px 0;
+  }
+  .footer-title {
+    font-size: 18px;
+    font-weight: bold;
+    color: #00f5a0;
+    margin-bottom: 15px;
+  }
+  .footer-links {
+    list-style: none;
+    padding: 0;
+  }
+  .footer-links li {
+    margin-bottom: 10px;
+  }
+  .footer-links a {
+    color: #ccc;
+    text-decoration: none;
+  }
+  .footer-links a:hover {
+    color: #00f5a0;
+  }
+  .social-icons {
+    margin-top: 15px;
+  }
+  .social-icon {
+    color: #00f5a0;
+    margin-right: 10px;
+    font-size: 20px;
+  }
+  .social-icon:hover {
+    color: #fff;
+  }
+</style>
 
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 <script src="https://unpkg.com/aos@2.3.4/dist/aos.js"></script>
 <script>AOS.init();</script>
+<script>
+  let prevScrollPos = window.pageYOffset;
+  const navbar = document.querySelector('.navbar');
+
+  window.addEventListener('scroll', () => {
+    const currentScrollPos = window.pageYOffset;
+
+    if (currentScrollPos > prevScrollPos && currentScrollPos > 80) {
+      // Cuộn xuống => ẩn
+      navbar.classList.add('hide-navbar');
+    } else {
+      // Cuộn lên => hiện
+      navbar.classList.remove('hide-navbar');
+    }
+
+    prevScrollPos = currentScrollPos;
+  });
+</script>
+
 </body>
 </html>
