--- a/index.html
+++ b/index.html
@@ -2273,8 +2273,8 @@
           <p><i>"Nền tảng có tính ứng dụng hiệu quả, kết hợp công nghệ mô phỏng và thực hành tài chính, giúp số hóa và nâng cao chất lượng đào tạo."</i></p>
           <div class="reviewer-info mt-3">
             <img src="./img/avatar.jpg" class="rounded-circle me-3" width="50" >
-            <h5>TS. Lê Ngọc Thành</h5>
-            <small>Phó Trường khoa CNTT - ĐH KHTN, ĐHQG-HCM</small>
+            <h5>PGS. TS. Lê Xuân Trường</h5>
+            <small>Phó Trường khoa Toán-Thống kê - ĐH Kinh tế TP.HCM</small>
           </div>
         </div>
       </div>
