--- a/index.html
+++ b/index.html
@@ -2182,7 +2182,7 @@
               <div class="timeline-content">
                 <h6>Thành công vượt trội</h6>
                 <p>Đưa FRM-AI trở thành nền tảng công nghệ hàng đầu tại Đông Nam Á</p>
-                <p>Nền tảng tiên phong phát triển KH-VN và đổi mới sáng tạo</p>
+                <p>Nền tảng tiên phong phát triển KH-CN và đổi mới sáng tạo</p>
               </div>
             </div>
           </div>
